
Preprocessor:
* Percent character (%) now yields \% in .tex files, instead of just % which
would be a LaTeX comment. Lines being different in .mlt and .tex files, this
made no sense.
* Comments may be used in text and math mode. They use (* *) and may be nested.
- Bugfix: \n in verbatim mode is now handle correctly.
* \\ now yields a single \ in the .ml file

Melt tool:
- -classic-display is not passed to recent mlpost versions which do not
handle it

Latex library:
- packages used by commands in ~title, ~author, ~date and ~prelude of the
document function are now taken into account
- figure caption may be placed at the side (?side_caption)
- figures may be wide (?wide)
- wrapfigure, floatingfigure, subfloat
- beamer colors may be given using rgb values
- ~underscore argument for pseudocode verbatim function
- equation
- index_exponent
- variables (similar in use to LaTeX counters, but evaluated when
  pretty-printing the .tex file)
- empty
- more delimiters, just_left, just_right, between
- and various other latex commands

Other:
* module Version renamed to Melt_version

Version 1.2.0
=============

Configuration, Compilation and Installation
- Default installation directory is now OCAMLLIB/melt, where OCAMLLIB is
either: the default installation directory of ocamlfind, or
the standard directory of caml if ocamlfind is not available.
- (bugfix) Do not link with mlpost if MLPOST = NO.

Melt tool and library:
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.
- Cairo support for Mlpost 0.7
* ?pdf argument for mlpost becomes ?mode
- -mlpost option
- -mlpost-no-prelude option

Preprocessor:
- Print opened and pending modes in unexpected end of file errors
- Print an error if a "}" appears in text or math mode

Latex library:
- (bugfix) the ~center option of figure has been fixed
- phantom, vphantom, hphantom
- Beamer overlays
- makebox, framebox
- unusual_command, for weird LaTeX commands with interleaved [] and {} arguments